fixed alignment

--- a/style.css
+++ b/style.css
@@ -26,9 +26,17 @@ body {
   flex: 0 0 25%;
   max-width: 25%;
 }
+.col-4 {
+  flex: 0 0 33%;
+  max-width: 33%;
+}
 .col-6 {
   flex: 0 0 50%;
   max-width: 50%;
+}
+.col-9 {
+  flex: 0 0 75%;
+  max-width: 75%;
 }
 .col-12 {
   flex: 0 0 100%;
@@ -171,13 +179,18 @@ input:focus {
   color: #2c71b8;
 }
 
+.flex-container {
+  display: flex;
+  flex-direction: row;
+}
+
 .carousel {
   height: 400px;
   background-color: #0a243e;
 }
 .filter-menu {
   background-color: #0a243e;
-  height: 850px;
+  height: 1200px;
 }
 .device {
   border: 1px solid white;
